# backendsqlite/src/routes/product.js
@@ -3,7 +3,7 @@ const router = express.Router()
 const product = require('../controllers/product.js')
 const user = require('../controllers/user.js')
 
-router.get('/api/products', user.verifyToken, product.getProducts)
+router.get('/api/products', user.verifyTokenAndFindUser, product.getProducts)
 // router.post('/api/users', user.newUser)
 
 // router.get('/api/users/:email', user.getUserByEmail)
